namespaces/live.cloud-platform.service.justice.gov.uk/rl-dps-microsvc-dev/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: rl-dps-microsvc-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "making-recall-decisions"
    cloud-platform.justice.gov.uk/slack-alert-channel: "dps_alerts_non_prod"
    cloud-platform.justice.gov.uk/application: "RL DPS Microsvc Dev"
    cloud-platform.justice.gov.uk/owner: "RL DPS Microsvc Dev: making-recall-decisions-tech@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-template-kotlin.git"
    cloud-platform.justice.gov.uk/team-name: "making-recall-decision"
